2007-08-14  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-tdep.c (arm_gdbarch_init): Allow unknown ABI and FPU settings
	to match any gdbarch with matching OSABI.  Set default ABI and FPU
	after running the OSABI handler.

2007-08-14  Daniel Jacobowitz  <dan@codesourcery.com>

	* config/i386/linux.mh (NATDEPFILES): Move corelow.o from here...
	* config/i386/linux.mt (TDEPFILES): ...to here.

2007-08-14  Vladimir Prus  <vladimir@codesourcery.com>

	* breakpoint.c (disable_breakpoints_in_shlibs): Remove
	the 'silent' parameter and code to implement that.
	* breakpoint.h (disable_breakpoints_in_shlibs): Adjust
	prototype.
	* win32-nat.c: Adjust.
	* solib.c: Adjust.
	
2007-08-14  Vladimir Prus  <vladimir@codesourcery.com>

	* breakpoint.c (update_breakpoints_after_exec): Don't
	set address to zero.

2007-08-13  Michael Snyder  <msnyder@access-company.com>

	* valops.c: Whitespace clean-up.

	* tui/tui-winsource.c (tui_alloc_source_buffer): Clean up allocation.

	* event-top.c (command_line_handler): Memory leak.

	* mi/mi-cmd-var.c (mi_cmd_var_set_format): Memory leak.
	No need to make copy.

	* source.c (find_source_lines): Require symtab 's'.

2007-08-11  Michael Snyder  <msnyder@access-company.com>

	* completer.c: Spelling fix in comments.

2007-08-10  Michael Snyder  <msnyder@access-company.com>

	* gdbtypes.c: Coding standard cleanup.
	* gdbtypes.c: Comment/whitespace cleanup.

	* stabsread.c (read_huge_number): Attempt to compute value before
	values that it depends on.

	* linespec.c (decode_dollar): Dead code, ptr can't be non-null.
	(decode_objc): Use "NULL" instead of 0.
	(find_method): Ditto.
	(decode_all_digits): Ditto.
	(decode_dollar): Ditto.

	* mi/mi-main.c (mi_cmd_data_evaluate_expression): Resource leak.

	* mi/mi-cmd-var.c (mi_cmd_var_list_children): Memory leak.

	* solib-svr4.c (enable_break): Don't free tmp_pathname until
	after closing bfd.

	* completer.c: Comment/whitespace cleanup.

2007-08-10  Joel Brobecker  <brobecker@adacore.com>
