@@ -1,3 +1,8 @@
+2007-08-14  Michael Snyder  <msnyder@access-company.com>
+
+	* varobj.c (cplus_describe_child): Guard against null.
+	Use "NULL" instead of "0" to initialize pointers.
+
 2007-08-14  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* arm-tdep.c (arm_gdbarch_init): Allow unknown ABI and FPU settings
